# bc

./: Cargo.toml  default.nix
src/: bruh.rs  bruh2.rs  calc.lalrpop  calc2.lalrpop  comp.rs  main.rs  tokenizer.rs
src/parser/: ast.rs  def.lalrpop  mod.rs
src/stage/: constant_eval.rs  mod.rs  scope.rs  types.rs
src/tokenizer/: adapter.rs  mod.rs  number.rs  token.rs
test/: main.bc
