[package]
name = "bc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteyarn = "0.3.0"
str-buf = "*"
lalrpop-util = {version = "0.20.2", features = ["unicode", "lexer"]}

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20.2"